web/libraries/fractal/components/tests/filter/fail/filter.twig
{% for k, v in sizes|filter(v => v > 38) -%}
  {{ k }}
  =
  {{ v }}
{% endfor %}
{# output l = 40 xl = 42 #}


{% set sizes = {
    xs: 34,
    s:  36,
    m:  38,
    l:  40,
    xl: 42,
} %}

{% for k, v in sizes|filter(v => v > 38) -%}
    {{ k }} = {{ v }}
{% endfor %}
{# output l = 40 xl = 42 #}
